Fixed navbar buttons on collapse

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ body {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   height: 100%;
-  padding-top: 70px
+  padding-top: 70px;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -99,8 +99,8 @@ body.toggled .place {
   width:1208.110px; /*hard coding for wrappers*/
   position:absolute;
 }
+
 .main {
-  margin-top: 65px;
   padding-top: 10px;
 }
 
@@ -420,6 +420,11 @@ select#sortList {
   background-color: #e8e8e8;
   float: right;
   overflow-x: hidden;
+}
+
+.navbar-collapse li>button {
+  width: 100%;
+  text-align: left;
 }
 
 #navbar-links li:not(#searchBar):hover {
